...
        self
    }

    var title: String {
        switch self {
        case .accountsAndGroups:
            "Accounts & Groups"
        case .dashboard:
            "Dashboard"
        case .alerts:
            "Alerts"
        case .widgets:
            "Widgets"
...
